--- a/index.html
+++ b/index.html
@@ -1,18 +1,66 @@
-﻿<!DOCTYPE html>
+<!<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>    <meta charset="utf-8">
+    <title>My Resume</title>
+  </head>
+  <body>
+    <img src="./Assets/Images/Pic.jpg" alt="My Picture" height="280">
+    <h2>Sai Sujith Rathamsetty</h2>
+    <hr>
+    <h2>Objective:</h2>
+    <p>Passionate Computer science engineer with
+      lot of enthuism is learning new skills and
+      developing world class software</p>
+    <h2><img src="./Assets/Images/books.jpg" alt="bunch of books" height="95">Education:</h2>
+    <ul>
+      <li>Schooling is from Naagrajuna High School in India with 92.1%</li>
+      <li>Inter is in the field of M.P.C from Sri Chaitanya Junior kalasala with 91.3%</li>
+      <li>Btech graduate from Vignan Institute of Tecnhology and Sciences in Computer
+      science with 75.3%</li>
+    </ul>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title>Sai Sujith R Portfolio</title>
-</head>
-<body>
-    <h1>Sai Sujith R`s Portfolio</h1>
-    <h2>I`m a web Developer</h2>
-    <hr />
-    <h2><a href="./Public/BirthdayInvite.html">Birthday Invite</a></h2>
-    <img src="./Assets/Images/birthday.png" />
-    <hr />
-    <h2><a href="./Public/TopMovies2k23.html">Birthday Invite</a></h2>
-    <img src="./Assets/Images/1.png" />
-</body>
+    <h2><img src="./Assets/Images/emp.jpg" alt="employement picture" height="95">Experience:</h2>
+    <ul>
+      <li>Cognizant Tecnhology and Solutions: Process Specialist Data
+        <ul>
+          <li>Nov 2022 to May 2023</li>
+          <li>Acting Team lead to manage 20 people in maintaining Quality and reaching
+          SLA`s on time.</li>
+          <li>Implemented ideas which reduced resource wastage and improved the productivity
+          by 9%.</li>
+          <li>Maintaining existing Dashboards to analyse and make business decisions.</li>
+        </ul>
+      </li>
+      <li>Infosys Pvt Ltd: Process Excecutive (MIS)</li>
+      <ul>
+        <li>Nov 2018 to June 2022</li>
+        <li>MIS excecutive for the project with over 200 employees.</li>
+        <li>Maintained data on the employees like productivity, quality.</li>
+        <li>Created Dashboards to help manageral level understand the progress of
+          project.
+        </li>
+      </ul>
+      <li>Accenture Solutions Pvt Ltd: Senior Process Excecutive</li>
+      <ul>
+        <li>Nov 2016 to July 2018</li>
+        <li>Acted as a mentor for new employees in order to help them understand the
+        policies and metrics.</li>
+        <li>Undertook many pilot projects which later on came effective on the production floor.</li>
+      </ul>
+    </ul>
+    <h2><img src="./Assets/Images/skills.png" alt="skills " height="95">Skills:</h2>
+    <ol>
+      <li>C</li>
+      <li>Java</li>
+      <li>Python</li>
+      <li>HTML</li>
+      <li>Power BI</li>
+      <li>Machine Learning</li>
+    </ol>
+      <h3>To know more about me click <a href="./Public/hobbies.html">here!!</a></h3>
+    <h3>To know my contact details click <a href="./Public/contact.html">here!!</a></h3>
+    <footer>
+      <small>Copyright © 2023 Sai Sujith Rathamsetty Archives. All Rights Reserved.</small>
+    </footer>
+  </body>
 </html>
